Commons 5.6 - fix some deprecations